# solana-pocs

./: README.md  poc-template-readme.md
account-close/: Cargo.toml  README.md
account-close-2/: README.md
account-close-2/src/: main.rs
account-close/src/: main.rs
borsh-serialization/: Cargo.toml  README.md
borsh-serialization/src/: lib.rs
dependency-graph/: README.md  excludes.txt  includes.txt  soldeps.py
dependency-graph/examples/: soldeps.gvz
pda-account-creation/: README.md
pda-account-creation/src/: lib.rs
pda-account-ownership/: README.md
pda-account-ownership/poc/: Anchor.toml  package.json
pda-account-ownership/poc/programs/poc/: Cargo.toml
pda-account-ownership/poc/programs/poc/src/: lib.rs
pda-account-ownership/poc/tests/: poc.ts
template-folder/: README.md
