[package]
name = "account-close"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.0"
solana-program-test = "1.10.5"
solana-sdk = "1.8.0"
serde_json = "1.0.79"
reqwest = "0.11.10"
arrayref = "0.3.6"
spl-token = "3.3.0"
base64 = "0.13.0"
tarpc = "0.27.2"
